# obs-recording-overlay

./: .gitignore  CMakeLists.txt  main.cpp  overlayapp.cpp  overlayapp.h  resources.qrc
qml/: main.qml  overlay.qml
qml/Components/: ConnectionStatus.qml  MenuItem.qml
qml/Overlay/: Overlay.qml
resources/: qml.qrc  resources.qrc
src/: overlayapp.cpp  overlayapp.h  systemtray.cpp  systemtray.h
src/core/: coloroptionenum.h
src/utilities/: thememanager.cpp  thememanager.h
themes/: Theme.qml
